fix overflow

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 html,
 body {
-  /* height: 100%; */
   width: 100%;
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
